# rust-practice

./: README.md
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
